<resources>
    <string name="app_name">Fitness</string>
    <string name="workout_img">Workout img</string>
    <string name="your_activities">Your Activities</string>
    <string name="dummy_date">Today 8 Jul</string>
    <string name="new_final_activity">New final activity</string>
    <string name="total_kilocalories">Total Kilocalories</string>
    <string name="steps">Steps</string>
    <string name="points">Points</string>
    <string name="distance">Distance</string>
    <string name="move_min">Move Min</string>
    <string name="update_data">Update data</string>
    <string name="intro_text">Track you fitness with our app\n start workout now</string>
    <string name="ok">ok</string>
    <string name="hello_user">Hello user</string>
    <string name="my_plan">My Plan</string>
    <string name="july_2021">July,2021</string>
    <string name="recent_plan">Recent plan</string>
    <string name="see_all">See All</string>
    <string name="_02_48">02:48</string>
    <string name="day1">Day 1</string>
    <string name="time">Time</string>
    <string name="favorite">Favorite</string>
    <string name="play">Play</string>
    <string name="day2">Day2</string>
    <string name="day3">Day3</string>
    <string name="body_weight">Body Weight</string>
    <string name="workouts_1_of_5">Workouts 1 of 5</string>
    <string name="week_1">Week 1</string>
    <string name="plans">Plans</string>
    <string name="intro_background">Intro Background</string>
    <string name="dumbell">Dumbell</string>
    <string name="treadmill">Treadmill</string>
    <string name="skipping_rope">Skipping Rope</string>
    <string name="tread_mill">Tread Mill</string>
</resources>