<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.fitness.FitnessViewModel" />

        <variable
            name="activity"
            type="com.example.fitness.MainActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">

            <androidx.cardview.widget.CardView
                android:id="@+id/workout_img_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="60sp"
                app:cardCornerRadius="100sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:contentDescription="@string/workout_img"
                    android:scaleType="centerCrop"
                    android:src="@drawable/workout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="24sp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/workout_img_card"
                app:layout_constraintLeft_toRightOf="@id/workout_img_card"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/workout_img_card">

                <TextView
                    android:id="@+id/date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@{viewModel.date}"
                    tools:text="@string/dummy_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/your_activities"
                    android:textColor="@color/dark_text"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <TextView
                android:id="@+id/calories_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.caloriesLiveData}"
                android:textColor="@color/dark_text"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/workout_img_card"
                tools:text="calories" />

            <TextView
                android:id="@+id/calories_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_kilocalories"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calories_tv" />

            <androidx.cardview.widget.CardView
                android:id="@+id/details_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24sp"
                app:cardBackgroundColor="#C7ECF1"
                app:cardCornerRadius="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calories_title">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12sp"
                    app:layout_constraintBottom_toTopOf="@id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/calories_title">

                    <TableRow>

                        <TextView
                            android:id="@+id/steps_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8sp"
                            android:layout_weight="1"
                            android:text="@{viewModel.stepsLiveData}"
                            android:textAlignment="center"
                            android:textColor="@color/dark_text"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:text="steps" />

                        <TextView
                            android:id="@+id/heart_points_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8sp"
                            android:layout_weight="1"
                            android:text="@{viewModel.heartPointsLiveData}"
                            android:textAlignment="center"
                            android:textColor="@color/dark_text"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:text="heart points" />

                        <TextView
                            android:id="@+id/walked_distance_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8sp"
                            android:layout_weight="1"
                            android:text="@{viewModel.walkedDistanceLiveData}"
                            android:textAlignment="center"
                            android:textColor="@color/dark_text"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:text="Walked distance" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8sp"
                            android:layout_weight="1"
                            android:text="@string/steps"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8sp"
                            android:layout_weight="1"
                            android:text="@string/points"
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8sp"
                            android:layout_weight="1"
                            android:text="@string/distance"
                            android:textAlignment="center" />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="24sp"
                android:background="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_card" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->viewModel.updateData()}"
                android:text="@string/update_data"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chart" />

            <Button
                android:id="@+id/button_plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->activity.openPlanActivity()}"
                android:text="@string/plans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_plan">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="24sp"
                    app:cardBackgroundColor="#4CAF50"
                    app:cardCornerRadius="12sp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="24sp"
                            android:layout_weight="1"
                            android:contentDescription="@string/dumbell"
                            android:src="@drawable/dumbbell"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dumbell"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="24sp"
                    app:cardBackgroundColor="#673AB7"
                    app:cardCornerRadius="12sp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toRightOf="@id/card1"
                    app:layout_constraintRight_toLeftOf="@id/card3"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="24sp"
                            android:layout_weight="1"
                            android:contentDescription="@string/tread_mill"
                            android:src="@drawable/treadmill"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/treadmill"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card3"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="24sp"
                    app:cardBackgroundColor="#3F51B5"
                    app:cardCornerRadius="12sp"
                    app:layout_constraintDimensionRatio="H,1:1"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_margin="24sp"
                            android:layout_weight="1"
                            android:contentDescription="@string/skipping_rope"
                            android:src="@drawable/skipping_rope"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/skipping_rope"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>